hard-gists/1321575/run.log
=== Docker Run Log for 1321575 ===
Started at: Mi 29. Okt 12:07:04 CET 2025

[2025-10-29 12:07:04] START: Running container for 1321575
[2025-10-29 12:07:05] SUCCESS: Container 84fc873e03ef506c70b77e027d0bf925efd0adbeedf20178053a0cc9d5d41f38 started for 1321575
=== Container logs for 1321575 ===
  File "/snippet.py", line 75
    print compute_cost(it, y, theta)
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 1321575 ===
[2025-10-29 12:07:07] INFO: Container 84fc873e03ef506c70b77e027d0bf925efd0adbeedf20178053a0cc9d5d41f38 has stopped
